# extools

./: .gitignore  Makefile  PACKAGE.md  README.md
envex/: Makefile
include/: envex.h  logex-std.h  logex.h  memex-log.h  memex.h  radpool.h
logex/: CMakeLists.txt  README.md
logex/examples/: CMakeLists.txt  logex-header-main.c  logex-header-simple.c  logex-header-sub.c
logex/include/: examples.h  logex-header.h  logex-levels.h  logex-lib.h  logex-main.h  logex.h
logex/test/: test-other-file.c  test.c
memex/: Makefile  tools.mk
memex/include/: memex-log.h  memex.h
memex/src/: cleanup.c  list.c  memex-log.c  pool.c  sort.c
memex/test/: list-test.c  pool-test.c  sort-test.c  test.c  thread-test.c
src/: cleanup.c  memex-log.c  pool.c  radpool.c
test/: logex-test.h
